feat(registration): send activation email on signup (WIP: activation endpoint not implemented)
