# src/controllers/auth.controller.ts
@@ -30,6 +30,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required:true,
+     schema: {$ref:"#/components/schemas/RegisterRequest"}
+     }
+     */
     const { username, email, password, confirmPassword, fullName }: TRegister = req.body;
 
     try {
@@ -63,6 +70,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ['Auth']
      #swagger.requestBody = {
      required:true,
      schema: {$ref:"#/components/schemas/LoginRequest"}
@@ -109,7 +117,8 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
-     *#swagger.security =[{
+     #swagger.tags = ['Auth']
+     #swagger.security =[{
      "bearerAuth":[]
      }]
      */
