# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { renderMailHtml, sendmail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User {
   fullName: string;
@@ -10,6 +12,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -67,6 +70,31 @@ UserSchema.methods.toJSON = function () {
   delete user.__v;
   return user;
 };
+
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+    console.log(`Send email to ${user.email}`);
+    const contenMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+
+    await sendmail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Aktivasi Akun Anda",
+      html: contenMail,
+    });
+  } catch (error) {
+    console.log("error :", error);
+  } finally {
+    next();
+  }
+});
 
 const UserModel = mongoose.model("User", UserSchema);
 
